# wba_classes_3Q24

./: README.md  pontos-gratis
classes/rs/anchor_vault_q3_2024/: Anchor.toml
classes/rs/dice_2024/: Anchor.toml
classes/rs/prereq_native_rust_project/: Cargo.toml
classes/ts/: package.json
classes/ts/cluster1/: spl_mint.ts  spl_transfer.ts
classes/ts/prereq/: Anchor.toml
classes/ts/prereq/programs/prereqs-program-solana/: Cargo.toml
pontos-gratis/pontos_gratis_app/: app.json  eas.json  index.ts  metro.config.js  package.json  polyfills.ts
pontos-gratis/pontos_gratis_app/app/: _layout.tsx
pontos-gratis/pontos_gratis_app/components/: NeoBrutalismTabBar.tsx  NeoComponents.tsx
pontos-gratis/pontos_gratis_app/helpers/: solanaHelper.ts
pontos-gratis/pontos_gratis_landing_page/: index.html  package.json  pnpm-lock.yaml
pontos-gratis/pontos_gratis_offchain/: package.json  pnpm-lock.yaml  tsconfig.json
pontos-gratis/pontos_gratis_offchain/app/: entry.client.tsx  entry.server.tsx  root.tsx
pontos-gratis/pontos_gratis_protocol/: Anchor.toml  package.json
pontos-gratis/pontosgratis_docs/: 404.html  index.html  index.xml  sitemap.xml
rs/actions_axum/: Cargo.toml
rs/amm/: Anchor.toml
rs/anchor_vault_q3_2024/: package.json
rs/dice_2024/: Anchor.toml
rs/escrow/: Anchor.toml
ts/: .gitignore  package.json
ts/cluster1/: nft_full.ts  nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_metadata_update.ts  spl_mint.ts  spl_transfer.ts  vault_init.ts
ts/prereq/: .gitignore  keygen.ts
ts/tools/: generate_pda.ts
(+129 files in other folders)
